@@ -1,6 +1,8 @@
 			   XPCE ChangeLog
 			   ==============
 
+* Class textbuffer: crash in Windows on <-scan.  Jacco van Ossenbruggen.
+
 * PceEmacs: Avoid loading DDE interface on Unix.
 
 VERSION 6.6.21, distributed with SWI-Prolog 5.6.21
